# abunfi-contracts

./: .env.example  .forgeignore  .gitattributes  .gitignore  DEPLOYMENT.md  PR_DESCRIPTION.md  README.md  SECURITY.md  UNISWAP_V4_FAIRFLOW_STRATEGY_SUMMARY.md  foundry.toml  foundry.toml.bak  package.json  slither.config.json
.github/: pull_request_template.md
deployments/: README.md  sepolia-core.json  sepolia-deployment.json
docs/: CI_OPTIMIZATION.md  DOCUMENTATION_SUMMARY.md  EIP7702_GASLESS_GUIDE.md  FUNCTION_DOCUMENTATION.md  GASLESS_INTEGRATION.md  RISC_ZERO_SOCIAL_VERIFICATION.md  TOKEN_MANAGEMENT_SECURITY.md  UniswapV4FairFlowStablecoinStrategy.md  WITHDRAWAL_SYSTEM.md
exports/: AaveStrategy.json  AbunfiVault.json  MockERC20.json  RiscZeroSocialVerifier.json  SocialAccountRegistry.json  index.json
risc0-social-verifier/: Cargo.toml
risc0-social-verifier/guest/: Cargo.toml
risc0-social-verifier/guest/src/: main.rs
risc0-social-verifier/host/src/: main.rs
risc0-social-verifier/tests/: token_management_tests.rs
script/: ConfigureSystem.s.sol  DemoRiskBasedSystem.s.sol  Deploy.s.sol  DeployCore.s.sol  DeployEIP7702.s.sol  DeployRiskBasedSystem.s.sol  DeploySepolia.s.sol  DeploySepoliaTest.s.sol  DeploySocialVerification.s.sol  DeployStrategies.s.sol  DeploymentSummary.s.sol  TestDeploy.s.sol
scripts/: deploy-sepolia.sh  export-abis.js  test-deployment.sh  test-fast.sh
sdk/: eip7702-sdk.js
src/: AbunfiVault.sol  RiskProfileManager.sol  StrategyManager.sol  WithdrawalManager.sol
test/: AaveStrategy.t.sol  AbunfiIntegrationTests.t.sol  (+31 more)
(+46 files in other folders)
